2003-11-24  Sven Neumann  <sven@gimp.org>
	* configure.in: (hopefully) fixed the check for the symbol prefix.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11601 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-24  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: (hopefully) fixed the check for the symbol prefix.
+
 2003-11-24  Ville Pätsi  <drc@gimp.org>
 
 	* gimp.spec.in: Fixed path creation typo.
