2003-11-25  RaphaÃ«l Quinet  <quinet@gamers.org>
	* NEWS: Improved the spelling of my name (missing accents) and
	added a mention about animoptimize in the last release.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11603 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-25  Raphaël Quinet  <quinet@gamers.org>
+
+	* NEWS: Improved the spelling of my name (missing accents) and
+	added a mention about animoptimize in the last release.
+
 2003-11-24  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* app/composite/gimp-composite-generic.c: Repaired an oversight on
