--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-25  Maurits Rijk  <m.rijk@chello.nl>
+
+	* plug-ins/bmp/bmpread.c: fix for #126366 (bmp - wrong colors loaded)
+
 2003-11-25  Raphaël Quinet  <quinet@gamers.org>
 
 	* NEWS: Improved the spelling of my name (missing accents) and
