--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-22  Dave Neary  <bolsh@gimp.org>
+
+	* libgimp/Makefile.am: Applied patch from  deaddog@deaddog.org (Abel 
+	Cheung) to make sure dependencies are built before we build libgimp and 
+	libgimpui. Fixes bug #127863.
+
 2003-11-25  Maurits Rijk  <m.rijk@chello.nl>
 
 	* plug-ins/bmp/bmpread.c: fix for #126366 (bmp - wrong colors loaded)
