--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-25  Sven Neumann  <sven@gimp.org>
 
+	* configure.in: applied a patch from Adrian Bunk that changes the
+	function to look for when checking for lcms (bug #127893). Also
+	added a warning when lcms is not found.
+
+2003-11-25  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/bmp/bmp.[ch]
 	* plug-ins/bmp/bmpread.c
 	* plug-ins/bmp/bmpwrite.c: some code cleanup (what a mess...).
