2003-11-25  Sven Neumann  <sven@gimp.org>
	* app/gui/dialogs.c (toplevel_entries): remember the size of the
	levels tool dialog. Fixes bug #127896.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11609 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-25  Sven Neumann  <sven@gimp.org>
 
+	* app/gui/dialogs.c (toplevel_entries): remember the size of the
+	levels tool dialog. Fixes bug #127896.
+
+2003-11-25  Sven Neumann  <sven@gimp.org>
+
 	* configure.in: applied a patch from Adrian Bunk that changes the
 	function to look for when checking for lcms (bug #127893). Also
 	added a warning when lcms is not found.
