Update Czech translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11610 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-25  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2003-11-24  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: added italian translation.
