2003-11-25  Michael Natterer  <mitch@gimp.org>
	* app/core/core-enums.[ch]: added GIMP_UNDO_EVENT_UNDO_FREEZE
	and GIMP_UNDO_EVENT_UNDO_THAW.

	* app/core/gimpimage.c: emit undo events in
	gimp_image_undo_freeze() and gimp_image_undo_thaw().

	* app/widgets/gimpundoeditor.c: made it aware of FREEZE/THAW signals
	and robust against evil stuff like freezing/thawing the undo
	in the middle of an open undo group. Fixes bug #124421.

	* plug-ins/script-fu/scripts/circuit.scm: push and undo group
	instead of disabling/enabling undo.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11611 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2003-11-25  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/core-enums.[ch]: added GIMP_UNDO_EVENT_UNDO_FREEZE
+	and GIMP_UNDO_EVENT_UNDO_THAW.
+
+	* app/core/gimpimage.c: emit undo events in
+	gimp_image_undo_freeze() and gimp_image_undo_thaw().
+
+	* app/widgets/gimpundoeditor.c: made it aware of FREEZE/THAW signals
+	and robust against evil stuff like freezing/thawing the undo
+	in the middle of an open undo group. Fixes bug #124421.
+
+	* plug-ins/script-fu/scripts/circuit.scm: push and undo group
+	instead of disabling/enabling undo.
+
 2003-11-25  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/dialogs.c (toplevel_entries): remember the size of the
