--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-25  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/interp_md5.[ch]: removed these unused files
+	from CVS.
+
+2003-11-25  Sven Neumann  <sven@gimp.org>
+
 	* app/paint/gimppaintcore.c (gimp_paint_core_scale_mask):
 	invalidate the solid brush cache as well. Should fix #127681.
 
