--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-25  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/libgimpbase-sections.txt
+	* libgimpbase/tmpl/gimplimits.sgml: added GIMP_MAX_MEMSIZE.
+
 2003-11-23  Michael Natterer  <mitch@gimp.org>
 
 	* app/app-docs.sgml
