2003-11-25  Sven Neumann  <sven@gimp.org>
	* libgimpbase/libgimpbase-sections.txt
	* libgimpbase/tmpl/gimplimits.sgml: added GIMP_MAX_MEMSIZE,
	documented all limits.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11615 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,7 +1,8 @@
 2003-11-25  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/libgimpbase-sections.txt
-	* libgimpbase/tmpl/gimplimits.sgml: added GIMP_MAX_MEMSIZE.
+	* libgimpbase/tmpl/gimplimits.sgml: added GIMP_MAX_MEMSIZE,
+	documented all limits.
 
 2003-11-23  Michael Natterer  <mitch@gimp.org>
 
