--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-25  Pablo G. del Campo  <pablodc@bigfoot.com>
+
+        * es.po: Updated Spanish translation.
+
 2003-11-25  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
