--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2003-11-26  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am: 
+	* configure.in
+	* gimpthumb-1.3.pc.in
+	* libgimpthumb/Makefile.am
+	* libgimpthumb/gimpthumb-enums.h
+	* libgimpthumb/gimpthumb-types.h
+	* libgimpthumb/gimpthumb.def
+	* libgimpthumb/gimpthumb.h
+	* libgimpthumb/gimpthumb-utils.[ch]
+	* libgimpthumb/gimpthumbnail.[ch]: added a first draft of
+	libgimpthumb. The API isn't final and the implementation is
+	incomplete. It compiles but don't attempt to use it yet.
+
 2003-11-25  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/gimplimits.h: added GIMP_MAX_MEMSIZE, an arbitrary
