--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-26  Sven Neumann  <sven@gimp.org>
 
+	* libgimpthumb/gimpthumb-utils.[ch]
+	* libgimpthumb/gimpthumbnail.[ch]: added save functionality. Still
+	unfinished.
+
+2003-11-26  Sven Neumann  <sven@gimp.org>
+
 	* Makefile.am: 
 	* configure.in
 	* gimpthumb-1.3.pc.in
