--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-26  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation
+	
 2003-11-26  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
