2003-11-26  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/Makefile.am
	* libgimpthumb/gimpthumb-enums.h
	* libgimpthumb/gimpthumb-utils.[ch]
	* libgimpthumb/gimpthumbnail.[ch]: more changes, still unfinished.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11626 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-26  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/Makefile.am
+	* libgimpthumb/gimpthumb-enums.h
+	* libgimpthumb/gimpthumb-utils.[ch] 
+	* libgimpthumb/gimpthumbnail.[ch]: more changes, still unfinished.
+
 2003-11-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/core-enums.[ch]: eek, it should be
