--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-26  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/svg.c (load_set_size_callback): fixed SVG import
+	preview for portrait SVG images.
+
+2003-11-26  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/animationplay.c
 	* plug-ins/common/animoptimize.c
 	* plug-ins/common/gif.c
