--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-26  Dave Neary  <bolsh@gimp.org>
+
+	* plug-ins/common/animoptimize.c: Quieten a couple of harmless
+	warnings. See bug #66367.
+ 
 2003-11-26  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/svg.c (load_set_size_callback): fixed SVG import
