2003-11-27  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/animationplay.c (is_ms_tag): more
	s/toupper/g_ascii_toupper/.

	* plug-ins/common/gee_zoom.c: #include <stdlib.h> for abs().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11636 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-27  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/animationplay.c (is_ms_tag): more
+	s/toupper/g_ascii_toupper/.
+
+	* plug-ins/common/gee_zoom.c: #include <stdlib.h> for abs().
+
 2003-11-26  Dave Neary  <bolsh@gimp.org>
 
 	* plug-ins/common/animoptimize.c: Quieten a couple of harmless
